--- a/_config.yml
+++ b/_config.yml
@@ -13,19 +13,42 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Lulin (Home) > Mladost
+title: Dormammu's Blog
 email: alexander.i.blagoev@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My own personal brain dump, this is what happens when Steam is down.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ablagoev.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  ablagoev
 
 # Build settings
+highlighter: rouge
 markdown: kramdown
-theme: minima
 gems:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-paginate
 exclude:
   - Gemfile
   - Gemfile.lock
+
+# Comments
+disqus-shortname: webjeda-demo
+
+kramdown:
+  syntax_highlighter: rouge
+
+#optimization
+#compress.html
+compress_html:
+  clippings: [html,div, p, ul, td, h1, h2, h3, h4,link, meta, footer, nav, img, header, hr, br, head, style, li, ul, ol, time, main, script, title]
+  comments: ["<!-- ", " -->"]
+  endings: [all]
+  ignore:
+    envs: [local]
+  blanklines: false
+  profile: false
+  startings: []
+
+sass:
+ style: compressed
